apps/services/typesense/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: typesense
spec:
  serviceName: typesense
  replicas: 1
  selector:
    matchLabels:
      app: typesense
  template:
    metadata:
      labels:
        app: typesense
    spec:
      containers:
      - name: typesense
        image: typesense/typesense:29.0
        args:
          - "--data-dir=/data"
          - "--api-key=$(TYPESENSE_API_KEY)"
          - "--enable-cors=true"
          - "--cors-allowed-origins=*"
        ports:
        - containerPort: 8108
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: "500m"
            memory: "4Gi"
          limits:
            cpu: "1"
            memory: "8Gi"
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        resize.topolvm.io/storage_limit: "20Gi"
        resize.topolvm.io/threshold: "20%"
        resize.topolvm.io/increase: "25%"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: hcloud-volumes
      resources:
        requests:
          storage: 10Gi
