apps/services/typesense/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense
spec:
  selector:
    app: typesense
  ports:
    - port: 8108
      targetPort: 8108
